--- a/main.tex
+++ b/main.tex
@@ -122,24 +122,24 @@
 %\affaddr\footnotemark[2] {Department of Computer Science, University at Albany, SUNY}\\[0.5mm]
 %        \footnotemark[1] \email {\{jfang8, rupen, ctlu, naren\}@cs.vt.edu }, \footnotemark[2] \email {fchen5@albany.edu}
 %}
-\author{\IEEEauthorblockN{Fang Jin}
-\IEEEauthorblockA{Discovery Analytics Center\\
-Department of Computer Science\\
-Virginia Tech\\
-Email: jfang8@cs.vt.edu}
-\and
-\IEEEauthorblockN{Feng Chen and \\ Rupinder Paul Khandpur}
-\IEEEauthorblockA{Department of Computer Science\\
-University at Albany, SUNY\\
-Virginia Tech\\
-Email: fchen5@albany.edu, rupen@cs.vt.edu}
-\and
-\IEEEauthorblockN{Chang-Tien Lu and\\ Naren Ramakrishnanu}
-\IEEEauthorblockA{Discovery Analytics Center\\
-Department of Computer Science\\
-Virginia Tech\\
-Email: ctlu@vt.edu, naren@cs.vt.edu}
-}
+%\author{\IEEEauthorblockN{Fang Jin}
+%\IEEEauthorblockA{Discovery Analytics Center\\
+%Department of Computer Science\\
+%Virginia Tech\\
+%Email: jfang8@cs.vt.edu}
+%\and
+%\IEEEauthorblockN{Feng Chen and \\ Rupinder Paul Khandpur}
+%\IEEEauthorblockA{Department of Computer Science\\
+%University at Albany, SUNY\\
+%Virginia Tech\\
+%Email: fchen5@albany.edu, rupen@cs.vt.edu}
+%\and
+%\IEEEauthorblockN{Chang-Tien Lu and\\ Naren Ramakrishnanu}
+%\IEEEauthorblockA{Discovery Analytics Center\\
+%Department of Computer Science\\
+%Virginia Tech\\
+%Email: ctlu@vt.edu, naren@cs.vt.edu}
+%}
 
 
 
@@ -150,8 +150,8 @@ Email: ctlu@vt.edu, naren@cs.vt.edu}
 % in the abstract
 \begin{abstract}
 Event detection in online social media has primarily focused on identifying
-abnormal spikes, or bursts, in activity. However, disruptive events such as socio-economic disasters, civil unrest, and even power outages, often result in abnormal troughs involving group absenteeism of activity. We present the first study, to our knowledge, that models absenteeism and uses detected absenteeism as a basis for event detection in location based social networks (LBSN) such as Twitter. Our framework addresses the challenges of (i) early detection of absenteeism, (ii) identifying the point of origin, and (iii) identifying groups or communities underlying the absenteeism. Our approach uses the formalism of graph wavelets to represent the spatiotemporal structure and user activity in a LSBN. This formalism affords multiscale analysis, enabling us to detect anomalous behavior at different graph resolutions, which in turn allows identification of event location and anomalous groups underlying the network. We introduce a systematic group anomaly detection method using graph wavelets to detect absenteeism group and burst group simultaneously. 
-%We introduce a systematic two-pass detection method using graph wavelets to detect group absenteeism and then check if there is a subsequent activity spike. 
+abnormal spikes, or bursts, in activity. However, disruptive events such as socio-economic disasters, civil unrest, and even power outages, often result in abnormal troughs involving group absenteeism of activity. We present the first study, to our knowledge, that models absenteeism and uses detected absenteeism as a basis for event detection in location based social networks (LBSN) such as Twitter. Our framework addresses the challenges of (i) early detection of absenteeism, (ii) identifying the point of origin, and (iii) identifying groups or communities underlying the absenteeism. Our approach uses the formalism of graph wavelets to represent the spatiotemporal structure and user activity in a LSBN. This formalism affords multiscale analysis, enabling us to detect anomalous behavior at different graph resolutions, which in turn allows identification of event location and anomalous groups underlying the network. We introduce a systematic group anomaly detection method using graph wavelets to detect absenteeism group and burst group simultaneously.
+%We introduce a systematic two-pass detection method using graph wavelets to detect group absenteeism and then check if there is a subsequent activity spike.
 The effectiveness of our approach is highlighted with three case studies involving Twitter activity over Latin American countries.
 \end{abstract}
 
