--- a/main.tex
+++ b/main.tex
@@ -347,16 +347,16 @@ Fig \ref{fig:graph_G} shows an undirected graph $\mathbf{G_1}$, and each edge's 
 \begin{figure}[ht]
 	\centering
 	\subfigure[]{
-		\includegraphics[width= 2.6in,height=1.1in] {figures/frequency.png}
+		\includegraphics[width= 2.5in,height=1in] {figures/frequency.png}
 		\label{fig:frequency1}
 	}
 	\subfigure[]{
-		\includegraphics[width= 2.58in,height=1in] {figures/g1_gamma.png}
+		\includegraphics[width= 2.4in,height=1in] {figures/g1_gamma.png}
 		\label{fig:g1_gamma}
 	}
 
 	\subfigure[]{
-		\includegraphics[width= 3.2in,height=1.2in] {figures/same_graph.png}
+		\includegraphics[width= 2.55in,height=1in] {figures/same_graph.png}
 		\label{fig:same_graph}
 	}
 
@@ -643,8 +643,8 @@ As long as the scale level $J$ is high enough, $f$ can be well decomposed into t
 		\includegraphics[width=1.5in] {figures/s2.png}
 		\label{fig:Brazil_W_coeff_date31_s5}
 	}
-	\caption{Graph Wavelets with center city $v_{83}$.}
-	\label{fig:graphwaveletcoefficient2}
+	\caption{Graph wavelets with center city $v_{83}$.}
+	\label{fig:graphwaveletscale}
 \end{figure}
 
 
@@ -653,15 +653,15 @@ As long as the scale level $J$ is high enough, $f$ can be well decomposed into t
 
 \begin{figure}[th]
 	\centering
-	\subfigure[wavelet $W_f(s_1,a)$]{
+	\subfigure[$W_f(s_1,a)$]{
 		\includegraphics[width=1.5in] {figures/Brazil_W_coeff_date31_s3.png}
 		\label{fig:Brazil_W_coeff_date31_s3}
 	}
-	\subfigure[wavelet $W_f(s_2,a)$]{
+	\subfigure[$W_f(s_2,a)$]{
 		\includegraphics[width=1.5in] {figures/Brazil_W_coeff_date31_s5.png}
 		\label{fig:Brazil_W_coeff_date31_s5}
 	}
-	\caption{Graph Wavelet coefficient $W_f(s_1,a)$ and $W_f(s_2,a)$.}
+	\caption{Graph wavelet coefficient $W_f(s_1,a)$ and $W_f(s_2,a)$.}
 	\label{fig:graphwaveletcoefficient}
 \end{figure}
 
@@ -698,20 +698,20 @@ Using the geocoding tool, we were able to extract tweets corresponding to $598,3
 \label{sec:experimental_setup}
 
 \paragraph{Graph Setup and $Z_{score}$ Time Series}
-Each city's, $v_i$'s  location is represented by its geographical coordinate pair $lat_i$ and $lon_i$. Instead of using the real physical distance, we  define the distance of any two cities $v_i$ and $v_j$ as $d_{ij}=\sqrt{(lat_i-lat_j)^2+(lon_i-lon_j)^2}$. We setup graph $G$ as a $k$ neighbors graph, which means  each city is only  connected to its $k$-nearest-neighbors. In this paper, we set $k=5$, and all the edges' weights  in $G$ are 1. Figure~\ref{fig:brazil_graph_nn_5} shows Brazil' $5$ nearest-neighbor Graph with 1276 cities.
+Each city's, $v_i$'s  location is represented by its geographical coordinate pair $lat_i$ and $lon_i$. Instead of using the real physical distance, we  define the distance of any two cities $v_i$ and $v_j$ as $d_{ij}=\sqrt{(lat_i-lat_j)^2+(lon_i-lon_j)^2}$. We setup graph $G$ as a $k$ neighbors graph, which means  each city is only  connected to its $k$-nearest-neighbors. In this paper, we set $k=5$, and all the edges' weights  in $G$ are 1. Figure~\ref{fig:brazil_graph_nn_5} shows Brazil' $5$ nearest-neighbor Graph with 5321 cities.
 
-\begin{figure}[th]
+\begin{figure}[t]
 	\centering
 	\subfigure[]{
-		\includegraphics[width=1.5in, height=1.5in] {figures/brazil_graph_nn_5.png}
+		\includegraphics[width=1.5in,height=1.2in] {figures/brazil_graph_nn_5.png}
 		\label{fig:brazil_graph_nn_5}
 	}
 	\subfigure[]{
-		\includegraphics[width=1.5in, height=1.5in] {figures/brazil_zscore_31.png}
+		\includegraphics[width=1.5in,height=1.2in] {figures/brazil_zscore_31.png}
 		\label{fig:brazil_zscore_31}
 	}
-	\caption{(a) Brazil $5$ nearest-neighbor Graph: 1276 cities an all edge weights are $1$. (b) Brazil $Z_{score}$ on July 31th, 2013, the color bar shows the scale of $Z_{score}$.}
-	\label{fig:graphwaveletcoefficient}
+	\caption{(a) Brazil $5$ nearest-neighbor Graph: 5321 cities an all edge weights are $1$. (b) Brazil $Z_{score}$ on July 31th, 2013, the color bar shows the scale of $Z_{score}$.}
+	\label{fig:knn_zscore}
 \end{figure}
 
 
@@ -745,14 +745,10 @@ We claim that the event frequency $\eta$ is linear to $\gamma_f(\mathbf{G})$, an
 \end{equation}We use historical data for training of $k_0$ and $k_1$ by least square error criterion. Once we know
 $k_0$ and $k_1$, given a new $\gamma_f'(\mathbf{G})$, the events number is estimated as $m=\left \lceil \eta' \right \rceil$. After that the threshold $\omega_{th}$ is set as the $m$ largest $W_f(s_j,a)$, for all $a\in V$, $0\le j \le J$.
 
-\subsection{Performance}
-We did experiment on three major protest countries: Brazil, Mexico and Venezuela, from Jan 2013 to Dec 2014. Taken the Gold Standard Report (GSR) as grand truth, we run the graph wavelet approach. For each day, decide whether there is any anomaly, if there is, identify the group of abnormal cities, then compare with GSR, see if the selected cities have protest events on that day, how many of them are matched with grand truth, how many of them do not have protest. We use recall, precision and F-measure to evaluate the performance.
-To evaluate our graph wavelet approach, we also compare with some intuitive approaches, like frequency based random assign, we call it baseline model, and Z-score based selection methods. The baseline model is built according to the historical protest records of each city, based on frequency, predict the future protests occurrence. The Z-score approach is, selecting the group of cities whose Z-score across some threshold, say $|Zscore|>3$.
-
-We compare three models performance over two years period test, and show the overall results on Table~\ref{table:models_compare}. Generally speaking, graph wavelet has better precision, recall, and F-measure scores than baseline across countries. The mean F-measure for graph wavelet detection across models and countries is greater than that for other predictions. Interestingly, we find that the graph wavelet work at different efficiency levels depending on each countries. Compared with Figure~\ref{Brazil_performance}, Figure~\ref{Mexico_performance} and Figure~\ref{Venezuela_performance}, we found graph wavelet model has a much higher recall in Venezuela than in Brazil, while has an inferior quality of event detection in Mexico than in Venezuela.
 
 
-\begin{table}[bth] %!htp
+
+\begin{table}[bt] %!htp
 \renewcommand{\arraystretch}{1.1}
 \caption{\label{table:models_compare} The performance of graph wavelet vs. baseline and Zscore.}
 \scriptsize
@@ -777,39 +773,32 @@ Venezuela & Baseline & 0.078 &0.053 & 0.059 \\
 \end{table}
 
 
-\begin{figure}[h]
+\begin{figure}[t]
 	\centering
-    {
-		\includegraphics[width= 3in] {figures/performance_compare_bar_graph_brazil.png}
-		\label{fig:distribution2}
+	\subfigure[Brazil]{
+		\includegraphics[width= 2.6in,height=1.4in] {figures/performance_compare_bar_graph_brazil.png}
+		\label{Brazil_performance}
 	}
-	\caption{Brazil protest detection performance.}
-	\label{Brazil_performance}
+	\hfill
+	\subfigure[Mexico]{
+		\includegraphics[width= 2.6in,height=1.4in] {figures/performance_compare_bar_graph_mexico.png}
+		\label{Mexico_performance}
+	}
+	\hfill
+	\subfigure[Venezuela]{
+		\includegraphics[width= 2.6in,height=1.4in] {figures/performance_compare_bar_graph_venezuela.png}
+		\label{Venezuela_performance}
+	}
+	\caption{Brazil, Mexico and Venezuela protest detection performance.}
+\label{fig:threecountry_performance}
 \end{figure}
 
 
-\begin{figure}[h]
-	\centering
-    {
-		\includegraphics[width= 3in] {figures/performance_compare_bar_graph_mexico.png}
-		\label{fig:distribution2}
-	}
-	\caption{Mexico protest detection performance.}
-	\label{Mexico_performance}
-\end{figure}
+\subsection{Performance}
+We did experiment on three major protest countries: Brazil, Mexico and Venezuela, from Jan 2013 to Dec 2014. Taken the Gold Standard Report (GSR) as grand truth, we run the graph wavelet approach. For each day, decide whether there is any anomaly, if there is, identify the group of abnormal cities, then compare with GSR, see if the selected cities have protest events on that day, how many of them are matched with grand truth, how many of them do not have protest. We use recall, precision and F-measure to evaluate the performance.
+To evaluate our graph wavelet approach, we also compare with some intuitive approaches, like frequency based random assign, we call it baseline model, and Z-score based selection methods. The baseline model is built according to the historical protest records of each city, based on frequency, predict the future protests occurrence. The Z-score approach is, selecting the group of cities whose Z-score across some threshold, say $|Zscore|>3$.
 
-
-\begin{figure}[h]
-	\centering
-    {
-		\includegraphics[width= 3in] {figures/performance_compare_bar_graph_venezuela.png}
-		\label{fig:distribution2}
-	}
-	\caption{Venezuela protest detection performance.}
-	\label{Venezuela_performance}
-\end{figure}
-
-
+We compare three models performance over two years period test, and show the overall results on Table~\ref{table:models_compare}. Generally speaking, graph wavelet has better precision, recall, and F-measure scores than baseline across countries. The mean F-measure for graph wavelet detection across models and countries is greater than that for other predictions. Interestingly, we find that the graph wavelet work at different efficiency levels depending on each countries. From Figure~\ref{fig:threecountry_performance}, we found graph wavelet model has a much higher recall in Venezuela than in Brazil, while has an inferior quality of event detection in Mexico than in Venezuela.
 
 \subsection{Case Studies}
 \label{sec:highlighted_results}
@@ -817,41 +806,50 @@ Venezuela & Baseline & 0.078 &0.053 & 0.059 \\
 \begin{figure}[t]
 	\centering
 	\subfigure[]{
-		\includegraphics[width=0.7in] {figures/Chile_absent_zscore_3.png}
+		\includegraphics[width=0.7in,height=0.8in] {figures/Chile_absent_zscore_3.png}
 		\label{fig:absent_Chile_score}
 	}
 	\hfill
 	\subfigure[]{
-		\includegraphics[width=0.7in] {figures/Chile_absent_wavelet_3.png}
+		\includegraphics[width=0.7in,height=0.8in] {figures/Chile_absent_wavelet_3.png}
 		\label{fig:absent_Chile_wavelet}
 	}
 	\hfill
 	\subfigure[]{
-		\includegraphics[width=0.7in] {figures/Chile_burst_zscore_3.png}
+		\includegraphics[width=0.7in,height=0.8in] {figures/Chile_burst_zscore_3.png}
 		\label{fig:burst_Chile_score}
 	}
 	\hfill
 	\subfigure[]{
-		\includegraphics[width=0.7in] {figures/Chile_burst_wavelet_3.png}
+		\includegraphics[width=0.7in,height=0.8in] {figures/Chile_burst_wavelet_3.png}
 		\label{fig:burst_Chile_wavelet}
 	}
-	\caption{Iquique Earthquake, Chile. Above plots show differences in distributions of absenteeism score and wavelet coefficients calculated at 8:45 PM, April 1, 2014 (a-b) involving group absenteeism and later when burst in activity is captured at 11:00 AM, April 2, 2014 (c-d), respectively.}
-\label{fig:case1_wavelet}
-\end{figure}
-
-\begin{figure}[t]
-	\centering
 	\subfigure[]{
-		\includegraphics[width=1.7in,height=0.8in] {figures/earthquake_example_10min_circle.png}
+		\includegraphics[width=1.4in,height=0.7in] {figures/earthquake_example_10min_circle.png}
 		\label{fig:earthquake}
 	}
 	\subfigure[]{
-		\includegraphics[width=1.7in,height=0.8in] {figures/earthquake_cloud.png}
+		\includegraphics[width=1.4in,height=0.7in] {figures/earthquake_cloud.png}
 		\label{fig:earthquake-cloud}
 	}
-	\caption{Iquique earthquake, Chile, April 1, 2014. (a) Tweet time series for Iquique on April 1, 2014. (b) Word cloud of tweets which mention `Iquique'.}
-\label{fig:case1_cloud}
+	\caption{Iquique Earthquake, Chile. Above plots show differences in distributions of absenteeism score and wavelet coefficients calculated at 8:45 PM, April 1, 2014 (a-b) involving group absenteeism and later when burst in activity is captured at 11:00 AM, April 2, 2014 (c-d), respectively. (e) Tweet time series for Iquique on April 1, 2014. (f) Word cloud of tweets which mention `Iquique'.}
+\label{fig:case1_wavelet}
 \end{figure}
+
+
+%\begin{figure}[t]
+%	\centering
+%	\subfigure[]{
+%		\includegraphics[width=1.4in,height=0.7in] {figures/earthquake_example_10min_circle.png}
+%		\label{fig:earthquake}
+%	}
+%	\subfigure[]{
+%		\includegraphics[width=1.4in,height=0.7in] {figures/earthquake_cloud.png}
+%		\label{fig:earthquake-cloud}
+%	}
+%	\caption{Iquique earthquake, Chile, April 1, 2014. (a) Tweet time series for Iquique on April 1, 2014. (b) Word cloud of tweets which mention `Iquique'.}
+%\label{fig:case1_cloud}
+%\end{figure}
 
 \textbf{Case study 1: Iquique Earthquake, Chile.}
 On April 1, 2014 around 8:46 PM (local time) a large earthquake struck off the coast of Chile, northwest of the port city of Iquique.
@@ -872,39 +870,48 @@ Strong absenteeism is observed from 8:45 PM to 9:20 PM. We also checked  user mo
 \begin{figure}[t]
 	\centering
 	\subfigure[]{
-		\includegraphics[width=1.05in, height=1in] {figures/Venuze_absent_zscore_3.png}
+		\includegraphics[width=0.7in, height=0.85in] {figures/Venuze_absent_zscore_3.png}
 		\label{fig:absent_Venezuela_score}
 	}
 	\subfigure[]{
-		\includegraphics[width=1.05in,height=1in] {figures/Venuze_absent_wavelet_3.png}
+		\includegraphics[width=0.7in,height=0.85in] {figures/Venuze_absent_wavelet_3.png}
 		\label{fig:absent_Venezuela_wavelet}
 	}
 	\subfigure[]{
-		\includegraphics[width=1.05in,height=1in] {figures/Venuze_burst_zscore_3.png}
+		\includegraphics[width=0.7in,height=0.85in] {figures/Venuze_burst_zscore_3.png}
 		\label{fig:burst_Venezuela_score}
 	}
 	\subfigure[]{
-		\includegraphics[width=1.05in,height=1in] {figures/Venuze_burst_wavelet_3.png}
+		\includegraphics[width=0.7in,height=0.85in] {figures/Venuze_burst_wavelet_3.png}
 		\label{fig:burst_Venezuela_wavelet}
 	}
-	\caption{Power Outage in Venezuela. Above plots show differences in distributions of absenteeism score and wavelet coefficients calculated at 7:40 PM, December 2, 2013 (a-b) involving group absenteeism and later when burst in activity is captured at 8:45 PM in the same day (c-d), respectively.}
+	\subfigure[]{
+		\includegraphics[width=1.4in,height=0.7in] {figures/Veneuela_power_count_all.png}
+		\label{fig:power}
+	}
+	\subfigure[]{
+		\includegraphics[width=1.4in,height=0.7in] {figures/power-English.png}
+		\label{fig:power-cloud}
+	}
+	\caption{Power Outage in Venezuela. Above plots show differences in distributions of absenteeism score and wavelet coefficients calculated at 7:40 PM, December 2, 2013 (a-b) involving group absenteeism and later when burst in activity is captured at 8:45 PM in the same day (c-d), respectively. (e) Time series of tweets volume. (f) Word cloud of tweets mentioning `Caracas'.}
 \label{fig:case2_wavelet}
 \end{figure}
 
 
-\begin{figure}[t]
-	\centering
-	\subfigure[]{
-		\includegraphics[width=1.6in,height=0.8in] {figures/Veneuela_power_count_all.png}
-		\label{fig:power}
-	}
-	\subfigure[]{
-		\includegraphics[width=1.6in,height=0.8in] {figures/power-English.png}
-		\label{fig:power-cloud}
-	}
-	\caption{Caracas, Venezuela power outage, December 2, 2013. (a) Time series of tweets volume. (b) Word cloud of tweets mentioning `Caracas'.}
-\label{fig:case2}
-\end{figure}
+%\begin{figure}[t]
+%	\centering
+%	\subfigure[]{
+%		\includegraphics[width=1.6in,height=0.8in] {figures/Veneuela_power_count_all.png}
+%		\label{fig:power}
+%	}
+%	\subfigure[]{
+%		\includegraphics[width=1.6in,height=0.8in] {figures/power-English.png}
+%		\label{fig:power-cloud}
+%	}
+%	\caption{Caracas, Venezuela power outage, December 2, 2013. (a) Time series of tweets volume. (b) Word cloud of tweets mentioning `Caracas'.}
+%\label{fig:case2}
+%\end{figure}
+
 \textbf{Case Study 2: Massive power outage in Venezuela.}
 A massive power outage in Venezuela plunged several major cities including the capital city, Caracas in to darkness around 7:40 PM (local time) on December 2, 2013.
 News media reported~\footnote{http://www.usatoday.com/story/news/world/2013/12/\hskip0ex 02/\hskip0ex power-failure-caracas-venezuela/3823327/}, that the power outage lasted for 10-15 minutes, and the people of Caracas soon went out in the streets to protest.
@@ -920,26 +927,26 @@ The word clouds of tweet content show a very similar story.
 The most dominant words are `light' and `blackout', even the Spanish phrase `sin luz' which means `no light' became a trending hashtag \#sinluz on Twitter.
 
 \textbf{Case Study 3: Christmas Day.}
-As mentioned earlier, an absenteeism behavior may not always lead to a spike in activity. In this case, our model detected strong absenteeism in social media activity for major holidays such as Christmas day, however it was not followed by a bursty period in Twitter activity. One explanation of this behavior is that people tend to travel back to visit family during the holidays. This is supported by low values of z-scores or high absenteeism in Figure~ \ref{fig:absent_Argentina_score} and wavelet coefficients in Figure~\ref{fig:absent_Argentina_wavelet} with respect to Argentina tweets on December 25, 2013. Hence, no subsequent burst period was detected for this event.
+As mentioned earlier, an absenteeism behavior may not always lead to a spike in activity. In this case, our model detected strong absenteeism in social media activity for major holidays such as Christmas day, however it was not followed by a bursty period in Twitter activity. One explanation of this behavior is that people tend to travel back to visit family during the holidays. This is supported by low values of z-scores or high absenteeism in Figure~ \ref{fig:absent_Argentina_score} and wavelet coefficients in Figure~\ref{fig:absent_Argentina_wavelet} with respect to Argentina tweets on December 25, 2013. Hence, no subsequent burst period was detected for this event. Interestingly as the Christmas day approached we observed (see Figure~\ref{fig:holiday-cloud}) that user mobility gradually increases and z-score decreases signaling greater absenteeism. We used Pearson's correlation coefficient to measure the two time series and found a correlation score of -0.94.
 
 \begin{figure}[t]
 	\centering
 	\subfigure[]{
-		\includegraphics[height=1in] {figures/Argentina_absent_zscore_3.png}
+		\includegraphics[height=0.9in] {figures/Argentina_absent_zscore_3.png}
 		\label{fig:absent_Argentina_score}
 	}
 	\subfigure[]{
-		\includegraphics[height=1in] {figures/Argentina_absent_wavelet_3.png}
+		\includegraphics[height=0.9in] {figures/Argentina_absent_wavelet_3.png}
 		\label{fig:absent_Argentina_wavelet}
 	}
 	\subfigure[]{
-		\includegraphics[width=1.6in,height=1in] {figures/holiday-cloud.png}
+		\includegraphics[width=1.3in, height=0.7in] {figures/holiday-cloud.png}
 		\label{fig:holiday-cloud}
 	}
 	\caption{The Christmas Day in Argentina: Above plots shows distributions of (a) absenteeism score and (b) wavelet coefficients calculated on December 25, 2013. (c) Time series comparing absenteeism score and user mobility corresponding to tweets between December 5, 2013 and December 25, 2013.}
 \label{fig:case3_wavelet}
 \end{figure}
-Interestingly as the Christmas day approached we observed (see Figure~\ref{fig:holiday-cloud}) that user mobility gradually increases and z-score decreases signaling greater absenteeism. We used Pearson's correlation coefficient to measure the two time series and found a correlation score of -0.94.
+
 \subsection{Why Absenteeism Group Detection?}
 Previous research has demonstrated the importance of burst detection in Twitter. In our study, we argue that group absenteeism can also be vital for detecting disruptive societal events. Modeling absenteeism is crucial, because it can serve as a surrogate signal for event detection. For example, in the case of the Iquique earthquake, where our algorithm  detected an absenteeism behavior on Twitter followed by a spike in user activity. Unlike traditional event detection methods which identify real time events only after they have occurred i.e., once the burst signal has been identified; the absenteeism signal can be observed much earlier, and it renders a foresight or view into the future events. Our approach thus offers a significant advantage over current strategies that focus solely on modeling spike or burst related patterns for event detection.
 
@@ -947,11 +954,17 @@ Previous research has demonstrated the importance of burst detection in Twitter.
 
 \section{Conclusion}
 \label{sec:conclusion}
-Existing approaches for event detection suffer from an inherent latency in their detection process. It is because they use the bursty signals from abnormal activity on social networks, but miss the absenteeism signal that precedes these bursts. Our approach bridges this shortcoming by successfully modeling this \textit{lull-ness}. We defined an absenteeism score over the groups of cities that form our Twitter network and used it construct wavelet transforms, that not only to detect the anomalous subgraphs at different scales, but also to find the geographical focal point of the anomaly. In this work, we have presented a systematic and unified framework for detecting, identifying event's location and distinguishing anomalous groups in Twitter. 
+Existing approaches for event detection suffer from an inherent latency in their detection process. It is because they use the bursty signals from abnormal activity on social networks, but miss the absenteeism signal that precedes these bursts. Our approach bridges this shortcoming by successfully modeling this \textit{lull-ness}. We defined an absenteeism score over the groups of cities that form our Twitter network and used it construct wavelet transforms, that not only to detect the anomalous subgraphs (including both burst and absenteeism groups) at different scales, but also to find the geographical focal point of the anomaly. What is more, the localization property of graph wavelet guarantees the selected groups to be compact automatically. Those identified abnormal groups are verified and proved to be indicative at detecting events such as man-made protests or natural disasters.
+%In this work, we have presented a systematic and unified framework for detecting, identifying event's location and distinguishing anomalous groups in Twitter.
 
-%From the three case studies, we have shown that the initial phase in the evolution of a disruptive, event is characterized by group absenteeism behavior. This behavior is further underlined by an increase in user mobility. As in the case of ``Christmas Day" event we observed absenteeism from Argentina Twitter users in days leading to December 25th was characterized by increased mobility (inferred from geolocated tweets). 
+%From the three case studies, we have shown that the initial phase in the evolution of a disruptive, event is characterized by group absenteeism behavior. This behavior is further underlined by an increase in user mobility. As in the case of ``Christmas Day" event we observed absenteeism from Argentina Twitter users in days leading to December 25th was characterized by increased mobility (inferred from geolocated tweets).
 
 %In future work, we plan to extend our detection model to capture extent of an event's influence over network. Another interesting extension of our work would be to include absenteeism as feature to classify event of different nature (disruptive vs non-disruptive).
+
+%Graph wavelet based approach, considering both the graph structure and the vector f;
+%Define an anomaly index of f’s distribution on G;
+%Identify abnormal locations using graph wavelet;
+%Detect absent and burst groups simultaneously.
 
 %\section*{Acknowledgment}
 %
@@ -1135,4 +1148,36 @@ Existing approaches for event detection suffer from an inherent latency in their
 \end{document}
 
 
-I
+
+%
+%\begin{figure}[h]
+%	\centering
+%    {
+%		\includegraphics[width= 3in] {figures/performance_compare_bar_graph_brazil.png}
+%		\label{fig:distribution2}
+%	}
+%	\caption{Brazil protest detection performance.}
+%	\label{Brazil_performance}
+%\end{figure}
+%
+%
+%\begin{figure}[h]
+%	\centering
+%    {
+%		\includegraphics[width= 3in] {figures/performance_compare_bar_graph_mexico.png}
+%		\label{fig:distribution2}
+%	}
+%	\caption{Mexico protest detection performance.}
+%	\label{Mexico_performance}
+%\end{figure}
+%
+%
+%\begin{figure}[h]
+%	\centering
+%    {
+%		\includegraphics[width= 3in] {figures/performance_compare_bar_graph_venezuela.png}
+%		\label{fig:distribution2}
+%	}
+%	\caption{Venezuela protest detection performance.}
+%	\label{Venezuela_performance}
+%\end{figure}
